# zero2prod

./: .env  Cargo.toml  config.yml  docker-compose.yml
migrations/: 20230909214127_create_subscriptions_table.sql
src/: configuration.rs  error.rs  lib.rs  main.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
