[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["json", "macros"] }
axum-macros = "0.3.8"
hyper = "0.14.27"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
